--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>{{ page.title }}</title>
+  <style>
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   {{ content }}
